Shim Buffer and use the latest version of react-native-udp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snmp-native",
+  "name": "react-native-snmp-native",
   "description": "A native Javascript SNMP implementation for Node.js",
   "author": "Jakob Borg <jakob@nym.se> (http://nym.se/)",
   "keywords": [
@@ -20,7 +20,8 @@
     "cov": "jscoverage lib lib-cov && EXPRESS_COV=1 NODE_PATH=lib-cov mocha -R html-cov > docs/coverage.html"
   },
   "dependencies": {
-    "react-native-udp": "^2.0.0"
+    "react-native-udp": "^3.0.0",
+    "buffer": "^4.9.1"
   },
   "devDependencies": {
     "docco": "~0.6.2",
